refine article lang with style pic

--- a/src/index.css
+++ b/src/index.css
@@ -15,11 +15,15 @@ code {
 }
 
 strong {
-  color: '#3CC68A'
+  color: #3CC68A
 }
 
 h1,h2,h3,h4,h5{
-  color: '#3CC68A'
+  color: #3CC68A
+}
+
+a{
+  color: #83a797
 }
 
 
