--- a/src/components/widget/fireworks/style.css
+++ b/src/components/widget/fireworks/style.css
@@ -1,13 +1,8 @@
+particle {
+  left: 0;
+  top: 0;
+  pointer-events: none;
+  position: fixed;
+  opacity: 0;
+}
 
-  canvas#canvas {
-    display: block;
-    background: #000;
-  }
-  
-  div.controller {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    padding: 1.6rem
-  }
-  
