--- a/src/components/widget/floating_cell/style.css
+++ b/src/components/widget/floating_cell/style.css
@@ -1,60 +1,60 @@
-  .floating-cell-root{
-    margin: 3em 0;
-  }
+.floating-cell-root {
+  margin: 3em 0;
+}
 
-  .linked-animate-demo-wrapper {
-    overflow: hidden;
-    height: 500px;
-    background: url('./space-bg.jpg');
-    background-position: center; /* Center the image */
-    background-repeat: no-repeat; /* Do not repeat the image */
-    background-size: cover;
-    position: relative;
-  }
-  
-  .linked-animate-demo-box {
-    position: absolute;
-    width: 1280px;
-    height: 600px;
-    display: block;
-    left: -100%;
-    top: 0;
-    bottom: 0;
-    right: -100%;
-    margin: auto;
-  }
-  
-  .linked-animate-demo-block {
-    position: absolute;
-    transition: transform .45s ease;
-  }
-  
-  .linked-animate-demo-block-child {
-    border-radius: 100%;
-    width: 100%;
-    height: 100%;
-    font-size: 10px;
-    padding: 2px;
-    color: white;
-    overflow: hidden;
-    border: 1px solid white;
-  }
+.linked-animate-demo-wrapper {
+  overflow: hidden;
+  height: 500px;
+  background: url("./space-bg.jpg");
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover;
+  position: relative;
+}
 
-  .linked-animate-demo-block-child-content {
-      width: 100%;
-      text-align: center;
-      justify-content: center;
-      white-space: pre-wrap;
-      height: 100%;
-  }
+.linked-animate-demo-box {
+  position: absolute;
+  width: 1280px;
+  height: 600px;
+  display: block;
+  left: -100%;
+  top: 0;
+  bottom: 0;
+  right: -100%;
+  margin: auto;
+}
 
-  .linked-animate-demo-block-child-content-title {
-      background-color: #3CC68A;
-      color: black;
-  }
+.linked-animate-demo-block {
+  position: absolute;
+  transition: transform 0.45s ease;
+}
 
-  .linked-animate-demo-block-child-content-data {
-      width: 100%;
-      white-space: normal;
-      overflow-wrap: break-word;
-  }
+.linked-animate-demo-block-child {
+  border-radius: 100%;
+  width: 100%;
+  height: 100%;
+  font-size: 10px;
+  padding: 2px;
+  color: white;
+  overflow: hidden;
+  border: 1px solid white;
+}
+
+.linked-animate-demo-block-child-content {
+  width: 100%;
+  text-align: center;
+  justify-content: center;
+  white-space: pre-wrap;
+  height: 100%;
+}
+
+.linked-animate-demo-block-child-content-title {
+  background-color: #3cc68a;
+  color: black;
+}
+
+.linked-animate-demo-block-child-content-data {
+  width: 100%;
+  white-space: normal;
+  overflow-wrap: break-word;
+}
