--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -9,25 +9,26 @@ body {
   color: white;
 }
 
-
-
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
 strong {
-  color: #3CC68A
+  color: #3cc68a;
 }
 
-h1,h2,h3,h4,h5{
-  color: #3CC68A
+h1,
+h2,
+h3,
+h4,
+h5 {
+  color: #3cc68a;
 }
 
-a{
-  color: #83a797
+a {
+  color: #83a797;
 }
-
 
 /* below is the customize scroll bar sytle  */
 
@@ -38,28 +39,28 @@ div::-webkit-scrollbar {
 pre::-webkit-scrollbar {
   display: none;
 }
-  
+
 /* Hide scrollbar for IE, Edge and Firefox */
 div {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 pre {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 /* but show scrollbar when hover for Chrome, Safari and Opera */
 div:hover::-webkit-scrollbar {
-    display: block;
-    width: 3px;
-    height: 3px;
+  display: block;
+  width: 3px;
+  height: 3px;
 }
 div:hover::-webkit-scrollbar-thumb {
-    background: #95cab3;
+  background: #95cab3;
 }
 div::-webkit-scrollbar-thumb:hover {
-    background: #3CC68A;
+  background: #3cc68a;
 }
 div::-webkit-scrollbar-button {
   background: gray;
@@ -67,19 +68,19 @@ div::-webkit-scrollbar-button {
   height: 0;
 }
 div::-webkit-scrollbar-corner {
-  background: rgba(0,0,0,0);
+  background: rgba(0, 0, 0, 0);
 }
 
 pre:hover::-webkit-scrollbar {
-    display: block;
-    width: 3px;
-    height: 3px;
+  display: block;
+  width: 3px;
+  height: 3px;
 }
 pre:hover::-webkit-scrollbar-thumb {
-    background: #95cab3;
+  background: #95cab3;
 }
 pre::-webkit-scrollbar-thumb:hover {
-  background: #3CC68A;
+  background: #3cc68a;
 }
 pre::-webkit-scrollbar-button {
   background: gray;
@@ -87,9 +88,8 @@ pre::-webkit-scrollbar-button {
   height: 0;
 }
 pre::-webkit-scrollbar-corner {
-  background: rgba(0,0,0,0);
+  background: rgba(0, 0, 0, 0);
 }
-    
+
 /* but show scrollbar when hover for IE, Edge and Firefox */
 /* todo: make up for ie\edge\firefox */
-
